# sandwich

./: .gitignore  .lintstagedrc.mjs  .prettierignore  CLAUDE.md  eslint.config.mjs  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: batch.rs  download.rs  export_seed.rs  ffmpeg.rs  import.rs  mod.rs  queue.rs  seed.rs
src-tauri/src/ffmpeg/: executor.rs  filters.rs  gpu.rs  mod.rs  probe.rs
src-tauri/src/migrations/: mod.rs  seed_v2.rs  seed_v3.rs
src-tauri/src/models/: batch.rs  gpu.rs  mod.rs  seed.rs  video.rs
src/components/: FFmpegDownload.vue  FFmpegStatus.vue  MainLayout.vue  PlaceholderHome.vue
src/composables/: useBatch.ts  useFfmpeg.ts  useQueue.ts  useSeed.ts
src/locales/: en.json  zh-CN.json
src/stores/: batch.ts  ffmpeg.ts  log.ts  queue.ts  seed.ts
src/types/: batch.ts  ffmpeg.ts  log.ts  seed.ts  video.ts
src/utils/: i18n.ts
(+120 files in other folders)
