[package]
name = "sandwich"
version = "0.1.0"
edition = "2024"
description = "Video fingerprint batch modification tool"
authors = ["ghost"]

[lib]
name = "sandwich_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"
ffmpeg-sidecar = { version = "2.5.1", features = ["download_ffmpeg"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
reqwest = { version = "0.12", features = ["stream", "json"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4.3"
futures-util = "0.3"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.26.1"
